--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -805,6 +805,16 @@ ul.shortcode-list i {
   color: #333;
 }
 
+#header-site-logo {
+  width:auto;
+  max-height:75px;
+}
+
+.fixed #header-site-logo {
+  width:auto;
+  max-height:40px;
+}
+
 .contain-to-grid {
   -moz-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
