Content and formatting
re arranged yml stuff
added sponsors

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -3,7 +3,7 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href='/index.html'>
+          <a href='/'>
             <img alt="Logo" src="/assets/images/CYW_Site_Logo.gif" id="header-site-logo" />
           </a>
         </h1>
@@ -38,6 +38,8 @@
             </li>
           {% endif %}
         {% endfor %}
+        <li><a href="https://twitter.com/yeastwranglers"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://www.facebook.com/Official-Cowtown-Yeast-WRanglers-100822796771293/"><i class="fa fa-facebook"></i></a></li>
       </ul>
     </section>
   </nav>
