--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3287,6 +3287,10 @@ body {
   position: relative;
   overflow: hidden;
   margin-bottom: 20px;
+  min-height: 236px;
+  &.main-sponsor{
+    min-height: 460px;
+  }
 }
 .modTeamMember ul {
   margin: 0;
@@ -3309,6 +3313,9 @@ body {
   line-height: 2.5rem;
 }
 .modTeamMember img {
+  &.background-dark {
+    background-color: #000;
+  }
   width: 100%;
 }
 .modTeamMember .overlay {
