fix link cleanup twitter widget in footer add benefits

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id='footer'>
   <div class='three spacing'></div>
   <div class='row'>
-    <div class='large-4 medium-4 columns'>
+    <div class='large-3 medium-3 columns'>
       <div class='spacing'></div>
       <div class='links'>
         <h4>Some pages</h4>
@@ -14,7 +14,7 @@
       </div>
       <div class='spacing'></div>
     </div>
-    <div class='large-4 medium-4 columns'>
+    <div class='large-3 medium-3 columns'>
       <div class='spacing'></div>
       <div class='links'>
         <h4>Recent posts</h4>
@@ -26,7 +26,7 @@
       </div>
       <div class='spacing'></div>
     </div>
-    <div class='large-4 medium-4 columns'>
+    <div class='large-3 medium-3 columns'>
       <div class='spacing'></div>
       <h4>Contact us</h4>
       <ul class='socials'>
@@ -46,6 +46,12 @@
           </a>
         </li>
       </ul>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <a class="twitter-timeline" data-chrome="transparent noborders nofooter noheader" href="https://twitter.com/yeastwranglers" data-widget-id="709111725476290560">Tweets by @yeastwranglers</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       <div class='spacing'></div>
     </div>
   </div>
