--- a/src/_includes/membership-types.html
+++ b/src/_includes/membership-types.html
@@ -1,6 +1,6 @@
 <div class='row'>
     <div class="large-12 columns">
-      <p>
+      <p class="lead">
         Memberships are good for the calendar year and allow you to attend all club meetings without paying a drop-in fee.  Annual members will also have their shipping charges subsidized if the member submits entries in a club-sanctioned brewing competition.  Annual members may also receive discounts at selected merchants.
       </p>
       <p>
