--- a/src/_includes/sponsors.html
+++ b/src/_includes/sponsors.html
@@ -19,7 +19,7 @@
               <div class='overlay'>
                 <div class='intro'>
                   <h3>{{sponsor.name}}</h3>
-                  <p>{{sponsor.position}}</p>
+                  <p>{{sponsor.benefit}}</p>
                   <ul class='socials'>
                     {% for social in sponsor.socials %}
                       <li>
@@ -51,7 +51,7 @@
             <div class='overlay'>
               <div class='intro'>
                 <h3>{{sponsor.name}}</h3>
-                <p>{{sponsor.position}}</p>
+                <p>{{sponsor.benefit}}</p>
                 <ul class='socials'>
                   {% for social in sponsor.socials %}
                     <li>
