--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -4,12 +4,27 @@
     <div class='large-3 medium-3 columns'>
       <div class='spacing'></div>
       <div class='links'>
-        <h4>Some pages</h4>
+        <h4>Navigation</h4>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/blog/">Follow our blog</a></li>
-          <li><a href="contact.html">Contact us</a></li>
-          <li><a href="services.html">Our services</a></li>
+          <li><a href="/">Home</a></li>
+          {% for item in site.data.nav %}
+            {% if item.children %}
+              <li>
+                <a href="{{site.url}}/{{ item.path }}">{{ item.name }}</a>
+                <ul class='dropdown'>
+                  {% for child in item.children %}
+                    <li>
+                      - <a href="{{site.url}}/{{item.path}}{{ child.path }}">{{ child.name }}</a>
+                    </li>
+                  {% endfor %}
+                </ul>
+              </li>
+            {% else %}
+              <li>
+                <a href="{{site.url}}/{{ item.path }}">{{ item.name }}</a>
+              </li>
+            {% endif %}
+          {% endfor %}
         </ul>
       </div>
       <div class='spacing'></div>
