Move favicon, remove is omebrew allowed check

--- a/src/_includes/meetings.html
+++ b/src/_includes/meetings.html
@@ -11,7 +11,7 @@
           <h3 style="color:#fefefe;">{{meeting.month}}</h3>
           <p>Topic: {{meeting.topic}}</p>
           <p>Location: {% if meeting.location_url%}<a href='{{meeting.location_url}}' target="_blank">{{meeting.location}}</a>{% else %}{{meeting.location}}{% endif %}</p>
-          {% if meeting.homebrew != null %}<p class="can-i-bring-homebrew">Can I bring homebrew? {% if meeting.homebrew %}<i class='fa fa-check'></i>{% else %}<i class='fa fa-times'></i>{% endif %}</p>{% endif %}
+          <!--{% if meeting.homebrew != null %}<p class="can-i-bring-homebrew">Can I bring homebrew? {% if meeting.homebrew %}<i class='fa fa-check'></i>{% else %}<i class='fa fa-times'></i>{% endif %}</p>{% endif %}-->
         </div>
       </div>
     </div>
