--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -29,30 +29,6 @@ section_id: blog
       </div>
     </div>
     <div class='two spacing'></div>
-    <a id='comments'></a>
-    <div class='comments-wrapper'>
-      <div id="disqus_thread"></div>
-      <script>
-        /**
-         * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-         * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-         */
-        /*
-         var disqus_config = function () {
-         this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
-         this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-         };
-         */
-        (function() { // DON'T EDIT BELOW THIS LINE
-          var d = document, s = d.createElement('script');
-
-          s.src = '//yeastwranglers.disqus.com/embed.js';
-
-          s.setAttribute('data-timestamp', +new Date());
-          (d.head || d.body).appendChild(s);
-        })();
-      </script>
-      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-    </div>
+    <a class="muut" href="https://muut.com/i/cowtownyeastwranglers/comments" type="dynamic">cowtownyeastwranglers</a> <script src="//cdn.muut.com/1/moot.min.js"></script>
 </div>
 </div>
