--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -34,7 +34,7 @@
       <div class='links'>
         <h4>Recent posts</h4>
         <ul>
-          {% for post in site.posts %}
+          {% for post in site.posts limit:10 %}
           <li><a href="{{post.url}}">{{post.title}}</a></li>
           {% endfor %}
         </ul>
