--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -1,28 +1,11 @@
 <div class='links'>
   <h3>Recent Posts</h3>
   <ul>
-  {% for post in site.posts %}
+  {% for post in site.posts limit:3 %}
     <li>
       <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
     </li>
   {% endfor %}
-  </ul>
-</div>
-
-<div class='links'>
-  <h3>Archives</h3>
-  <ul>
-  {% assign tags_list = site.categories %}
-    {% if tags_list.first[0] == null %}
-      {% for tag in tags_list %}
-        <li><a href="#{{ tag }}">{{ tag | capitalize }}</a> <span>({{ site.tags[tag].size }})</span></li>
-      {% endfor %}
-    {% else %}
-      {% for tag in tags_list %}
-        <li><a href="#{{ tag[0] }}">{{ tag[0] | capitalize }}</a> <span>({{ tag[1].size }})</span></li>
-      {% endfor %}
-    {% endif %}
-  {% assign tags_list = nil %}
   </ul>
 </div>
 
@@ -32,7 +15,7 @@
     <p id="{{ tag[0] }}">{{ tag[0] | capitalize }}</p>
     <ul class="post-list">
       {% assign pages_list = tag[1] %}
-      {% for post in pages_list %}
+      {% for post in pages_list limit:3 %}
         {% if post.title != null %}
         {% if group == null or group == post.group %}
         <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
