--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3290,6 +3290,7 @@ body {
 
 .modSectionHeader.big h2 {
   font-size: 4rem;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .modSectionHeader.big h3 {
   font-weight: normal;
