--- a/src/_includes/meetings.html
+++ b/src/_includes/meetings.html
@@ -8,7 +8,7 @@
       <div class='mod modIconText' style="padding:10px;margin:10px 0;background: #000;background: rgba(0,0,0,.8);" >
         <div class='icon-text-simple'>
           <i class='fa fa-calendar'></i>
-          <h3 style="color:#fefefe;">{{meeting.month}}</h3>
+          <h3 style="color:#fefefe;">{{meeting.month}} 8pm</h3>
           {% if meeting.topic %}
           <p>Topic: {% if meeting.topic_url%}<a href='{{meeting.topic_url}}' target="_blank">{{meeting.topic}}</a>{% else %}{{meeting.topic}}{% endif %}</p>
           {% endif %}
