Add a class to the text inputs on signup as [type=text] is being stripped

--- a/src/assets/scss/foundation/components/_forms.scss
+++ b/src/assets/scss/foundation/components/_forms.scss
@@ -410,7 +410,7 @@ $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%) !default;
     span.postfix,label.postfix { @include postfix(); }
 
     /* We use this to get basic styling on all basic form elements */
-    #{text-inputs(all, 'input')} {
+    .text-input, #{text-inputs(all, 'input')} {
       -webkit-appearance: none;
       border-radius: 0;
       @include form-element;
