--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1048,7 +1048,7 @@ form#contact_form {
   width: 97%;
 }
 
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
+.text-input, input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
   padding: 15px;
   height: 3rem;
   margin-bottom: 1.875rem;
