Add more meetings, change meetings to calendar
post about getting to the community center

--- a/src/_includes/meetings.html
+++ b/src/_includes/meetings.html
@@ -13,11 +13,14 @@
           <p>Topic: {% if meeting.topic_url%}<a href='{{meeting.topic_url}}' target="_blank">{{meeting.topic}}</a>{% else %}{{meeting.topic}}{% endif %}</p>
           {% endif %}
           <p>Location: {% if meeting.location_url%}<a href='{{meeting.location_url}}' target="_blank">{{meeting.location}}</a>{% else %}{{meeting.location}}{% endif %}</p>
+          {% if meeting.type %}
+          <p>Type: {{meeting.type}}</p>
+          {% endif %}
           <!--{% if meeting.homebrew != null %}<p class="can-i-bring-homebrew">Can I bring homebrew? {% if meeting.homebrew %}<i class='fa fa-check'></i>{% else %}<i class='fa fa-times'></i>{% endif %}</p>{% endif %}-->
         </div>
       </div>
     </div>
-    {% if loopindex == 0 %}
+    {% if loopindex == 0 or forloop.last %}
     </div>
     {% endif %}
   {% endfor %}
