Add github links to footer

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -61,6 +61,7 @@
       ga('send', 'pageview');
 
     </script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 
 </html>
