--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -55,6 +55,20 @@
             <i class='fa fa-twitter'></i>
           </a>
         </li>
+        <li>
+          <a href='https://github.com/chrisvdp/yeastwranglers-www/'>
+            <i class='fa fa-github'></i>
+          </a>
+        </li>
+      </ul>
+      <div class='spacing'></div>
+      <ul>
+        <li>
+          <a class="github-button" href="https://github.com/chrisvdp/yeastwranglers-www/issues" data-icon="octicon-issue-opened" data-style="mega" data-count-api="/repos/chrisvdp/yeastwranglers-www#open_issues_count" data-count-aria-label="# issues on GitHub" aria-label="Issue chrisvdp/yeastwranglers-www on GitHub">Issue</a>
+        </li>
+        <li>
+          <a class="github-button" href="https://github.com/chrisvdp/yeastwranglers-www/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/chrisvdp/yeastwranglers-www/network" data-count-api="/repos/chrisvdp/yeastwranglers-www#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork chrisvdp/yeastwranglers-www on GitHub">Fork</a>
+        </li>
       </ul>
       <div class='spacing'></div>
     </div>
