Add lazy loading for sponsor images

--- a/src/_includes/sponsors.html
+++ b/src/_includes/sponsors.html
@@ -8,7 +8,7 @@
       <div class="medium-6 large-6 columns">
         <div class='mod modTeamMember'>
             <div class='member main-sponsor'>
-              <img class="avatar" alt="{{sponsor.name}} Logo" src="{{ sponsor.image }}" />
+              <img class="avatar" alt="{{sponsor.name}} Logo" data-original="{{ sponsor.image }}" />
               <div class='overlay'>
                 <div class='intro'>
                   <h3>{{sponsor.name}}</h3>
@@ -40,7 +40,7 @@
     <div class="medium-3 large-3 columns">
       <div class='mod modTeamMember'>
           <div class='member'>
-            <img class="avatar {{sponsor.imageclass}}" alt="{{sponsor.name}} Logo" src="{{ sponsor.image }}" />
+            <img class="avatar {{sponsor.imageclass}}" alt="{{sponsor.name}} Logo" data-original="{{ sponsor.image }}" />
             <div class='overlay'>
               <div class='intro'>
                 <h3>{{sponsor.name}}</h3>
