make the forums a bit more readable

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -240,3 +240,19 @@
         }
     }
 }
+
+.m-reply .m-post {
+    padding: 15px 0 0;
+}
+.m-reply .m-facelink {
+  margin-top: 21px;
+}
+.m-facelink {
+  margin-top: 6px;
+}
+.moot img.m-face{
+  border-radius: 0;
+}
+.m-body .m-empty {
+    padding-bottom: 0;
+}
