update payment, meetings and slides

--- a/src/_includes/membership-types.html
+++ b/src/_includes/membership-types.html
@@ -1,10 +1,10 @@
 <div class='row'>
     <div class="large-12 columns">
       <p class="lead">
-        Memberships are good for the calendar year and allow you to attend all club meetings without paying a drop-in fee.  Annual members will also have their shipping charges subsidized if the member submits entries in a club-sanctioned brewing competition.  Annual members may also receive discounts at selected merchants.
+        Memberships are good for the calendar year and allow you to attend all club meetings without paying a drop-in fee.  Annual members will also have their shipping charges subsidized if the member submits entries in a club-sanctioned brewing competition.  Annual members may also <a href="/membership/sponsors/" target="_blank">receive discounts at selected merchants</a>.</p>
       </p>
       <p>
-        Drop-in memberships are also available to attend individual club meetings.  The cost per meeting is $10 which subsidizes the cost of commercial beer samples.  Annual members are not required to pay drop-in fees.
+        Drop-in memberships are also available to attend individual club meetings.  The cost per meeting is $10.  Annual members are not required to pay drop-in fees.
       </p>
       <div class="three spacing"></div>
     </div>
